Update scrollbar for viewer and fix height issue for page header

--- a/src/components/PDFViewer/pdf_viewer.scss
+++ b/src/components/PDFViewer/pdf_viewer.scss
@@ -282,10 +282,25 @@
 }
 
 .pdfViewer {
-  /*overflow: hidden*/
   overflow: auto;
   height: 100%;
-  background-color: #282c34;
+  //background-color: #282c34;
+
+  &::-webkit-scrollbar {
+    width: 9px;
+    border-radius: 10px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: transparent;
+    border-radius: 10px;
+    margin: 10px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: #a8a8a8;
+  }
 }
 
 .pdfViewer .canvasWrapper {
